--- a/styles/components/base.css
+++ b/styles/components/base.css
@@ -26,8 +26,8 @@
         @apply lg:ml-0;
     }
     .twilight-content {
-        @apply relative mx-auto h-full bg-[url('/images/mask.svg')] px-6 pb-4 pt-2 dark:text-gray-300 md:pt-4;
-        @apply bg-light-gray [mask-image:linear-gradient(0deg,#fff,rgba(255,255,255,1))] dark:bg-dark-secondary;
+        @apply relative mx-auto h-full bg-light-gray px-6 pb-4 pt-2 dark:bg-dark-secondary dark:text-gray-300 md:pt-4;
+        @apply bg-[url('/images/mask.svg')] [mask-image:linear-gradient(0deg,#fff,rgba(255,255,255,1))];
     }
 
     .app-customizer {
